Prodwork/atefwork/dep-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-demo
  namespace: ingress-nginx
spec:
  #type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: app-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: app-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: app-demo
    spec:
      containers:
      - name: my-app-container
        image: hashicorp/http-echo
        args:
        - "-text=hello, your request goes through DEMO ingress"
        ports:
        - containerPort: 5678
