Prodwork/atefwork/ingress-ahmed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  namespace: ingress-nginx
#  annotations:
 #  kubernetes.io/ingress.class: nginx-dev
spec:
  ingressClassName: nginx-qa
#  defaultBackend:
 #   service:
  #    name: my-dev
   #   port:
    #    number: 80
  rules:
  - host: it.qa5.proxym-it.tn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: it-nginx
            port:
              number: 80
