Prodwork/atefwork/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  namespace: ingress-nginx
 # annotations:
#    kubernetes.io/ingress.class: nginx-app
 #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-app
  #defaultBackend:
   # service:
    #  name: my-app
     # port:
      #  number: 80
  rules:
  - host: test.app5.proxym-it.tn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app
            port:
              number: 80
