Prodwork/atefwork/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  namespace: ingress-nginx
#  annotations:
 #  kubernetes.io/ingress.class: nginx-dev
spec:
  ingressClassName: nginx-dev
#  defaultBackend:
 #   service:
  #    name: my-dev
   #   port:
    #    number: 80
  rules:
  - host: test.dev5.proxym-it.tn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-dev
            port:
              number: 80
